2005-09-07  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: free ca_list and crl_list when an error happens while
	  loading the certificates. This fixes a core dump.

2005-09-05  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed `open host.com/path'; fixed a coredump
	  when a bookmark contained lots of quotable characters.

2005-08-12  Alexander V. Lukyanov <lav@yars.free.net>

	* parsecmd.cc: return PARSE_AGAIN if the command ends with \0,
	  which means it is incomplete.
	* CmdExec.cc: use now instead of time().
	* StatusLine.cc: use ShowN in Clear so that status line is not
	  continuously cleared while executing scripts.

2005-08-09  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: don't try PROPFIND on a file to get file listing.

2005-08-05  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: fixed --loop without --delete (the loop
	  was infinite if there were files to be deleted).

2005-08-04  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Fish.cc, SFtp.cc: fixed a hang-up in http (and possibly
	  in other protocols).
	* FileAccess.cc, FileAccess.h: make Path::Change accept url-encoded
	  path too.
	* CmdExec.cc: allow cd redirections to file.

2005-08-03  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: use FileAccess::Path for old_cwd.
	* ConnectionSlot.cc, ConnectionSlot.h, FindJob.cc, FindJob.h,
	  GetFileInfo.cc, GetFileInfo.h, LsCache.cc: use FileAccess::Path.
	* FileAccess.cc, FileAccess.h: use cwd.url in GetFileURL; new method
	  PathVerify; set new_cwd->url in SetFileURL; use Path for saved_cwd;
	  modify url in Path::Change; unset is_file for some known directories;
	  implement operator== for Path; new method ChdirAccept.
	* Http.cc: modify url generation using cwd.url and cwd.is_file.
	* commands.cc: modify cd and open to work with file URLs;
	  fixed `source' command to return error code on bad files.